
[project]
name = 'Zello_Bridge'
version = '0.0.2a1'
requires-python = '>=3.8'
authors = [
  { name = 'Matt G4IYT', email = 'matt@g4iyt.uk' },
  { name = 'Hafizi 9W2LGX', email = '9w2lgx@mhrtech.my' },
]
readme = 'README.md'
dependencies = ['aiohttp', 'cryptography', 'pyjwt', 'pyogg']

[tool.uv.sources]
pyogg = { git = 'https://github.com/TeamPyOgg/PyOgg' }

[project.scripts]
zello_bridge = 'zello_bridge.__main__:main'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.uv]
package = true

[tool.ruff]
line-length = 150
analyze.detect-string-imports = true
format.quote-style = 'single'
format.indent-style = 'tab'
format.docstring-code-format = true
format.line-ending = 'lf'
format.skip-magic-trailing-comma = true
lint.isort.combine-as-imports = true
lint.isort.default-section = 'first-party'
lint.isort.force-single-line = true
